--- a/404.html
+++ b/404.html
@@ -1,11 +1,11 @@
 ---
 layout: default
-title: 404
+title: "404 - Страница не найдена"
 permalink: /404
 nav_exclude: true
 search_exclude: true
 ---
 
-<h1>Page not found</h1>
+<h1>Страница не найдена</h1>
 
-<p>The page you requested could not be found. Try using the navigation {% if site.search_enabled != false %}or search {% endif %}to find what you're looking for or go to this <a href="{{ '/' | absolute_url }}">site's home page</a>.</p>
+<p>Извините, но страница которую вы искали не найдена, попробуйте воспользоваться поиском или <a href="{{ '/' | absolute_url }}">вернуться на главную страницу</a>.</p>
